2013-02-13  Juri Linkov  <juri@jurta.org>

	* image-mode.el (image-mode-map):
	* doc-view.el (doc-view-mode-map):
	* vc/ediff-util.el (ediff-setup-keymap):
	Make S-SPC scroll in the opposite sense to SPC.  (Bug#2145)

2013-02-13  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-move-to-block): Improve
	performance.  Instead of recalculating indentation fully for each
	line, sum up indentation depth based only on visited lines.
	(ruby-parse-partial): Increase the depth after "do" even when END
	is right after it.
	(ruby-parse-partial): When END is in the middle of a percent
	literal, increase the depth if the delimiter chars belong to the
	paren syntax class.

2013-02-13  Kirill A. Korinskiy  <catap@catap.ru>

	* play/fortune.el (fortune-compile): Also make the compiled file
	if it does not exist at all, not just if it is old.  (Bug#5338)

2013-02-13  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/package.el (package-menu-execute): Doc fix.

2013-02-13  Yves Baumes  <ybaumes@gmail.com>  (tiny change)

	* lisp/emacs-lisp/package.el (package-menu-execute):
	Add optional noquery argument.  (Bug#13625)

2013-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/ange-ftp.el (ange-ftp-make-directory): Don't raise an error,
	if DIR exists and PARENTS is non-nil.

2013-02-13  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/js.el (js--multi-line-declaration-indentation):
	Silence byte-compiler warning.

2013-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-adb.el (tramp-adb-handle-start-file-process): Rewrite.

	* net/tramp-compat.el (top): Declare `remote-file-name-inhibit-cache'
	only if it doesn't exist.

	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Set
	process marker.

2013-02-12  Tassilo Horn  <tsdh@gnu.org>

	* doc-view.el (doc-view-odf->pdf-converter-soffice): Use separate
	UserInstallation when calling soffice to work around LibreOffice
	bug 37531.

2013-02-12  Glenn Morris  <rgm@gnu.org>
