@@ -787,7 +787,12 @@ Reestablish the default three-window display."
 	   (frame-live-p ediff-control-frame)
 	   (not ediff-use-long-help-message)
 	   (not (ediff-frame-iconified-p ediff-control-frame)))
-      (raise-frame ediff-control-frame))
+      (if (fboundp 'select-frame-set-input-focus)
+	  (select-frame-set-input-focus ediff-control-frame)
+	(raise-frame ediff-control-frame)
+	(select-frame ediff-control-frame)
+	(if (fboundp 'focus-frame)
+	    (focus-frame ediff-control-frame))))
 
   ;; Redisplay whatever buffers are showing, if there is a selected difference
   (let ((control-frame ediff-control-frame)
